--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -21,6 +21,7 @@ build-javaVersion = "VERSION_11"
 compose-navigation = "2.9.0-rc01"
 koin-bom = "4.1.1"
 koin-ksp = "2.1.0"
+koin-core = "4.1.0"
 viewmodel-compose = "2.9.4"
 
 [libraries]
@@ -46,8 +47,9 @@ viewmodel-compose-lifecycle = { module = "org.jetbrains.androidx.lifecycle:lifec
 
 koin-annotations = { module = "io.insert-koin:koin-annotations", version.ref = "koin-ksp" }
 koin-bom = { module = "io.insert-koin:koin-bom", version.ref = "koin-bom" }
-koin-compose = { module = "io.insert-koin:koin-compose" }
+koin-compose = { module = "io.insert-koin:koin-compose", version.ref = "koin-core"}
 koin-ksp-compiler = { module = "io.insert-koin:koin-ksp-compiler", version.ref = "koin-ksp" }
+koin-viewmodel = { module = "io.insert-koin:koin-compose-viewmodel", version.ref = "koin-core" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
